--- a/.github/workflows/bot_runner.yml
+++ b/.github/workflows/bot_runner.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           python-version: '3.10'
       - name: Install dependencies
-        run: pip install pandas yfinance sqlite3
+        run: pip install pandas yfinance plotly
       - name: Run Strategy
         run: python src/strategy.py
       - name: Commit and Push Database
